@@ -1,15 +1,9 @@
-FROM openjdk:8 AS TEMP_BUILD_IMAGE
-ENV APP_HOME=/usr/app/
-WORKDIR $APP_HOME
-COPY build.gradle settings.gradle gradlew $APP_HOME
-COPY gradle $APP_HOME/gradle
-RUN ./gradlew build -x test || return 0
-COPY . .
-RUN ./gradlew build -x test
+FROM openjdk:8-jre-slim
 
-FROM openjdk:8
-ENV APP_HOME=/usr/app/
-WORKDIR $APP_HOME
-COPY --from=TEMP_BUILD_IMAGE $APP_HOME/build/libs/*.jar .
 EXPOSE 8080
-CMD ["java","-jar",$ARTIFACT_NAME]
+
+RUN mkdir /app
+RUN ls
+COPY build/libs/*.jar /app/spring-boot-application.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
